[S201118_007] ACORV4 : Génération des annonces avec ACORV4  - Modificiation du pom et du bindings pour la génération des classes "Annonces"  - Refacto de la création des annonces  - Création du WS